Created BaseEntity for all jpa entities